--- a/about-us.htm
+++ b/about-us.htm
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-    <title>VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点</title>
-        <meta name="keywords" content="VPN在线，最新免费V2rayC机场分享,VPN,Clash,购买PC翻墙上网" />
-        <meta name="description" content="VPN在线是代理工具Clash内核的GUI图形客户端，支持Windows、Linux、macOS系统，分流规则功能强大且支持多种代理协议，如V2Ray、Trojan、Shadowsocks、ShadowsocksR、Socks等协议，使用方法和功能和VPN在线类似，可以完美代替Clash for Windows使用，通过本文免费翻墙使用教程快速入门篇所掌握的技巧，能快速方便配置代理协议进行代理访问。" />
+    <title>关于我们 - VPN在线 订阅机场官网</title>
+        <meta name="keywords" content="关于我们 - VPN在线 订阅机场官网" />
+        <meta name="description" content="关于我们 - VPN在线 订阅机场官网" />
         <link rel="icon" href="/assets/website/img/nekoboxandroid/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="VPN在线 订阅机场官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://vpn-online.github.io" />
     <meta property="og:site_name" content="VPN在线 订阅机场官网" />
-    <meta property="og:title" content="VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点" />
+    <meta property="og:title" content="关于我们 - VPN在线 订阅机场官网" />
     <meta property="og:image" content="/assets/website/img/nekoboxandroid/favicon.ico" />
-        <meta property="og:description" content="VPN在线是代理工具Clash内核的GUI图形客户端，支持Windows、Linux、macOS系统，分流规则功能强大且支持多种代理协议，如V2Ray、Trojan、Shadowsocks、ShadowsocksR、Socks等协议，使用方法和功能和VPN在线类似，可以完美代替Clash for Windows使用，通过本文免费翻墙使用教程快速入门篇所掌握的技巧，能快速方便配置代理协议进行代理访问。" />
+        <meta property="og:description" content="关于我们 - VPN在线 订阅机场官网" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点">
+    <meta name="apple-mobile-web-app-title" content="关于我们 - VPN在线 订阅机场官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -54,7 +54,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="index">
+<body data-page="newly_discovered_nodes">
         <!-- ***** Preloader Start ***** -->
     <div id="preloader">
         <div class="jumper">
@@ -71,7 +71,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <a href="/" class="logo">
-                                                <h1>VPN在线</h1>
+                                                <span>VPN在线</span>
                                                 </a>
                         
                         <!-- ***** Menu Start ***** -->
@@ -92,15 +92,16 @@
     </header>
     <!-- ***** Header Area End ***** -->
     <!-- ***** Welcome Area Start ***** -->
-    <div class="welcome-area" id="welcome">
+    <div class="welcome-area list" id="welcome">
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
             <div class="container">
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h2>VPN在线 节点购买推荐订阅地址分享 2025 持续更新</h2>
+                        <h1>关于我们</h1>
                         <p>
-                            免费Clash/V2rayC/VPN节点分享，节点包含美国、日本、台湾、香港、新加坡等地常用节点。                        </p>
+                            <a href="/">首页</a> / <span>关于我们</span>
+                        </p>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                         <img src="/assets/website/img/nekoboxandroid/slider-icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
@@ -116,26 +117,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <h2>最近更新文章</h2>
-                    <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-10">
-                            <div class="col-md-3">
-                                <a href="/news/article-143554.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240804/81716dac03e019f077c0955210996938.webp" class="rounded img-fluid d-block mx-auto" alt="突破网络边界：科学上网全局模式全方位指南">
-                                </a>
-                            </div>
-                            <div class="right-text col-md-9">
-                                <div class="left-heading">
-                                    <a href="/news/article-143554.htm" class="xcblog-blog-url">
-                                        <h3 class="xcblog-blog-title">突破网络边界：科学上网全局模式全方位指南</h3>
-                                    </a>
-                                </div>
-                                <div class="left-text">
-                                    <p>在信息高速流通的今天，互联网已成为我们获取知识、交流思想的重要渠道。然而，由于各种原因，许多有价值的网络资源对我们设置了访问限制。科学上网技术应运而生，成为打破信息壁垒的利器。本文将深入探讨如何将科学</p>
-                                </div>
-                            </div>
-                        </div>
-                                            </div>
+                    <p>在网络的浩瀚宇宙中，有一个名字如同璀璨的星辰，照亮了无数寻求自由网络之路的人们——VPN在线 订阅机场官网。这不仅仅是一个提供免费节点订阅服务的平台，更是一场关于勇气、智慧与梦想的创业传奇。</p>
+<p>故事的起点，可以追溯到那个网络封锁日益严重的年代。那时，网络世界仿佛被一层无形的墙所隔绝，人们渴望着能够自由穿梭于信息的海洋之中。正是在这样的背景下，VPN在线 订阅机场官网的创始人，一位名叫李明的年轻工程师，怀揣着对自由的渴望和对技术的热爱，踏上了创业之路。</p>
+<p>李明原本在一家知名互联网公司担任技术骨干，每天面对着繁琐的代码和无尽的压力。然而，他内心深处始终有一个声音在呼唤，那就是打破网络束缚，让每一个人都能享受到自由、平等的网络访问权。于是，他毅然决然地辞去了工作，踏上了创业的征途。</p>
+<p>起初，李明的创业之路并不顺利。他面临着资金短缺、技术难题以及来自各方面的压力和质疑。然而，他并没有放弃，而是凭借着对技术的深厚功底和对梦想的执着追求，一步步克服了一个又一个难关。</p>
+<p>在这个过程中，李明遇到了志同道合的伙伴们。他们有的是经验丰富的程序员，有的是对网络自由充满热情的年轻人。大家汇聚一堂，共同为VPN在线 订阅机场官网的未来而努力。他们日夜奋战，不断优化平台功能，提升用户体验。终于，在无数个不眠之夜后，VPN在线 订阅机场官网横空出世，以其稳定、高效的免费节点订阅服务，迅速赢得了广大用户的喜爱和信赖。</p>
+<p>然而，创业的道路从来都不是一帆风顺的。随着VPN在线 订阅机场官网的知名度越来越高，也引来了不少竞争对手的恶意攻击和诽谤。面对这些挑战，李明和他的团队始终保持着冷静和理智。他们坚信，只要坚持为用户提供优质的服务和真诚的态度，就一定能够赢得用户的信任和支持。</p>
+<p>如今，VPN在线 订阅机场官网已经成为了一个备受瞩目的创业传奇。它不仅为用户提供了便捷、高效的免费节点订阅服务，更成为了网络自由、信息平等的象征。在这个充满挑战和机遇的时代里，VPN在线 订阅机场官网将继续秉持着初心和使命，为每一个渴望自由网络的人们保驾护航。</p>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -217,6 +205,17 @@
     <!-- Global Init -->
     <script src="/assets/website/js/frontend/nekoboxandroid/custom.js"></script>
     <script src="https://www.freeclashnode.com/assets/js/frontend/invite-url.js"></script><script src="/assets/website/js/frontend/G.js"></script>
+    <script>
+    $(function() {
+        $('.js_to').click(function() {
+            var url = $(this).data('url');
+            var code = $(this).data('code');
+            url += code;
+
+            window.open(url);
+        })
+    });
+    </script>
 </body>
 
 </html>
