--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-    <title>VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点</title>
-        <meta name="keywords" content="VPN在线，最新免费V2rayC机场分享,VPN,Clash,购买PC翻墙上网" />
-        <meta name="description" content="VPN在线是代理工具Clash内核的GUI图形客户端，支持Windows、Linux、macOS系统，分流规则功能强大且支持多种代理协议，如V2Ray、Trojan、Shadowsocks、ShadowsocksR、Socks等协议，使用方法和功能和VPN在线类似，可以完美代替Clash for Windows使用，通过本文免费翻墙使用教程快速入门篇所掌握的技巧，能快速方便配置代理协议进行代理访问。" />
+    <title>免责申明 - VPN在线 订阅机场官网</title>
+        <meta name="keywords" content="免责申明 - VPN在线 订阅机场官网" />
+        <meta name="description" content="免责申明 - VPN在线 订阅机场官网" />
         <link rel="icon" href="/assets/website/img/nekoboxandroid/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="VPN在线 订阅机场官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://vpn-online.github.io" />
     <meta property="og:site_name" content="VPN在线 订阅机场官网" />
-    <meta property="og:title" content="VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点" />
+    <meta property="og:title" content="免责申明 - VPN在线 订阅机场官网" />
     <meta property="og:image" content="/assets/website/img/nekoboxandroid/favicon.ico" />
-        <meta property="og:description" content="VPN在线是代理工具Clash内核的GUI图形客户端，支持Windows、Linux、macOS系统，分流规则功能强大且支持多种代理协议，如V2Ray、Trojan、Shadowsocks、ShadowsocksR、Socks等协议，使用方法和功能和VPN在线类似，可以完美代替Clash for Windows使用，通过本文免费翻墙使用教程快速入门篇所掌握的技巧，能快速方便配置代理协议进行代理访问。" />
+        <meta property="og:description" content="免责申明 - VPN在线 订阅机场官网" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点">
+    <meta name="apple-mobile-web-app-title" content="免责申明 - VPN在线 订阅机场官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -54,7 +54,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="index">
+<body data-page="newly_discovered_nodes">
         <!-- ***** Preloader Start ***** -->
     <div id="preloader">
         <div class="jumper">
@@ -71,7 +71,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <a href="/" class="logo">
-                                                <h1>VPN在线</h1>
+                                                <span>VPN在线</span>
                                                 </a>
                         
                         <!-- ***** Menu Start ***** -->
@@ -92,15 +92,16 @@
     </header>
     <!-- ***** Header Area End ***** -->
     <!-- ***** Welcome Area Start ***** -->
-    <div class="welcome-area" id="welcome">
+    <div class="welcome-area list" id="welcome">
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
             <div class="container">
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h2>VPN在线 节点购买推荐订阅地址分享 2025 持续更新</h2>
+                        <h1>免责申明</h1>
                         <p>
-                            免费Clash/V2rayC/VPN节点分享，节点包含美国、日本、台湾、香港、新加坡等地常用节点。                        </p>
+                            <a href="/">首页</a> / <span>免责申明</span>
+                        </p>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                         <img src="/assets/website/img/nekoboxandroid/slider-icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
@@ -116,26 +117,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <h2>最近更新文章</h2>
-                    <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-10">
-                            <div class="col-md-3">
-                                <a href="/news/article-143554.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240804/81716dac03e019f077c0955210996938.webp" class="rounded img-fluid d-block mx-auto" alt="突破网络边界：科学上网全局模式全方位指南">
-                                </a>
-                            </div>
-                            <div class="right-text col-md-9">
-                                <div class="left-heading">
-                                    <a href="/news/article-143554.htm" class="xcblog-blog-url">
-                                        <h3 class="xcblog-blog-title">突破网络边界：科学上网全局模式全方位指南</h3>
-                                    </a>
-                                </div>
-                                <div class="left-text">
-                                    <p>在信息高速流通的今天，互联网已成为我们获取知识、交流思想的重要渠道。然而，由于各种原因，许多有价值的网络资源对我们设置了访问限制。科学上网技术应运而生，成为打破信息壁垒的利器。本文将深入探讨如何将科学</p>
-                                </div>
-                            </div>
-                        </div>
-                                            </div>
+                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
+<p>一、服务内容</p>
+<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
+<p>二、网络安全</p>
+<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
+<p>三、隐私保护</p>
+<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
+<p>四、版权及知识产权</p>
+<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
+<p>五、免责条款</p>
+<ol>
+    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
+    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
+    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
+</ol>
+<p>六、其他</p>
+<ol>
+    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
+    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
+</ol>
+<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -217,6 +219,17 @@
     <!-- Global Init -->
     <script src="/assets/website/js/frontend/nekoboxandroid/custom.js"></script>
     <script src="https://www.freeclashnode.com/assets/js/frontend/invite-url.js"></script><script src="/assets/website/js/frontend/G.js"></script>
+    <script>
+    $(function() {
+        $('.js_to').click(function() {
+            var url = $(this).data('url');
+            var code = $(this).data('code');
+            url += code;
+
+            window.open(url);
+        })
+    });
+    </script>
 </body>
 
 </html>
