--- a/privacy.htm
+++ b/privacy.htm
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-    <title>VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点</title>
-        <meta name="keywords" content="VPN在线，最新免费V2rayC机场分享,VPN,Clash,购买PC翻墙上网" />
-        <meta name="description" content="VPN在线是代理工具Clash内核的GUI图形客户端，支持Windows、Linux、macOS系统，分流规则功能强大且支持多种代理协议，如V2Ray、Trojan、Shadowsocks、ShadowsocksR、Socks等协议，使用方法和功能和VPN在线类似，可以完美代替Clash for Windows使用，通过本文免费翻墙使用教程快速入门篇所掌握的技巧，能快速方便配置代理协议进行代理访问。" />
+    <title>隐私申明 - VPN在线 订阅机场官网</title>
+        <meta name="keywords" content="隐私申明 - VPN在线 订阅机场官网" />
+        <meta name="description" content="隐私申明 - VPN在线 订阅机场官网" />
         <link rel="icon" href="/assets/website/img/nekoboxandroid/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="VPN在线 订阅机场官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://vpn-online.github.io" />
     <meta property="og:site_name" content="VPN在线 订阅机场官网" />
-    <meta property="og:title" content="VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点" />
+    <meta property="og:title" content="隐私申明 - VPN在线 订阅机场官网" />
     <meta property="og:image" content="/assets/website/img/nekoboxandroid/favicon.ico" />
-        <meta property="og:description" content="VPN在线是代理工具Clash内核的GUI图形客户端，支持Windows、Linux、macOS系统，分流规则功能强大且支持多种代理协议，如V2Ray、Trojan、Shadowsocks、ShadowsocksR、Socks等协议，使用方法和功能和VPN在线类似，可以完美代替Clash for Windows使用，通过本文免费翻墙使用教程快速入门篇所掌握的技巧，能快速方便配置代理协议进行代理访问。" />
+        <meta property="og:description" content="隐私申明 - VPN在线 订阅机场官网" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="VPN在线 | ClashX/V2rayC免费机场订阅地址分享，Clash节点购买推荐，2025免费推荐节点">
+    <meta name="apple-mobile-web-app-title" content="隐私申明 - VPN在线 订阅机场官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -54,7 +54,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="index">
+<body data-page="newly_discovered_nodes">
         <!-- ***** Preloader Start ***** -->
     <div id="preloader">
         <div class="jumper">
@@ -71,7 +71,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <a href="/" class="logo">
-                                                <h1>VPN在线</h1>
+                                                <span>VPN在线</span>
                                                 </a>
                         
                         <!-- ***** Menu Start ***** -->
@@ -92,15 +92,16 @@
     </header>
     <!-- ***** Header Area End ***** -->
     <!-- ***** Welcome Area Start ***** -->
-    <div class="welcome-area" id="welcome">
+    <div class="welcome-area list" id="welcome">
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
             <div class="container">
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h2>VPN在线 节点购买推荐订阅地址分享 2025 持续更新</h2>
+                        <h1>隐私申明</h1>
                         <p>
-                            免费Clash/V2rayC/VPN节点分享，节点包含美国、日本、台湾、香港、新加坡等地常用节点。                        </p>
+                            <a href="/">首页</a> / <span>隐私申明</span>
+                        </p>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                         <img src="/assets/website/img/nekoboxandroid/slider-icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
@@ -116,26 +117,51 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <h2>最近更新文章</h2>
-                    <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-10">
-                            <div class="col-md-3">
-                                <a href="/news/article-143554.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240804/81716dac03e019f077c0955210996938.webp" class="rounded img-fluid d-block mx-auto" alt="突破网络边界：科学上网全局模式全方位指南">
-                                </a>
-                            </div>
-                            <div class="right-text col-md-9">
-                                <div class="left-heading">
-                                    <a href="/news/article-143554.htm" class="xcblog-blog-url">
-                                        <h3 class="xcblog-blog-title">突破网络边界：科学上网全局模式全方位指南</h3>
-                                    </a>
-                                </div>
-                                <div class="left-text">
-                                    <p>在信息高速流通的今天，互联网已成为我们获取知识、交流思想的重要渠道。然而，由于各种原因，许多有价值的网络资源对我们设置了访问限制。科学上网技术应运而生，成为打破信息壁垒的利器。本文将深入探讨如何将科学</p>
-                                </div>
-                            </div>
-                        </div>
-                                            </div>
+                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们深知用户隐私的重要性，并致力于保护用户的个人信息和隐私安全。本隐私声明旨在明确告知用户本平台如何收集、使用、存储和保护用户的个人信息。</p>
+<p>一、信息收集</p>
+<ol>
+    <li>
+        <p><strong>用户主动提供的信息</strong>：当用户在本平台注册、使用服务或参与特定活动时，可能会主动提供个人信息，如姓名、邮箱地址等。这些信息将仅用于提供服务或活动的目的，并在用户明确同意的情况下进行收集。</p>
+    </li>
+    <li>
+        <p><strong>服务使用数据</strong>：为了优化用户体验和服务质量，本平台可能会自动收集用户在使用服务过程中产生的数据，如访问记录、节点使用情况等。这些数据将用于分析服务使用情况，以便我们持续改进服务。</p>
+    </li>
+</ol>
+<p>二、信息使用</p>
+<ol>
+    <li>
+        <p><strong>提供服务</strong>：本平台将使用收集到的信息来提供用户所需的服务，包括但不限于节点订阅、服务更新通知等。</p>
+    </li>
+    <li>
+        <p><strong>数据分析</strong>：我们可能会对收集到的数据进行分析，以了解用户的使用习惯和需求，从而改进和优化服务。</p>
+    </li>
+    <li>
+        <p><strong>法律合规</strong>：在必要时，我们可能会根据法律法规的要求，向相关部门提供用户的个人信息，以配合执法或调查工作。</p>
+    </li>
+</ol>
+<p>三、信息存储与保护</p>
+<ol>
+    <li>
+        <p><strong>信息安全</strong>：本平台将采取必要的技术和管理措施，确保用户个人信息的安全。我们会对存储的数据进行加密处理，并定期进行安全检查和漏洞修复。</p>
+    </li>
+    <li>
+        <p><strong>信息存储期限</strong>：我们将根据服务需求和相关法律法规的要求，合理确定用户个人信息的存储期限。一旦超出存储期限，我们将对个人信息进行删除或匿名化处理。</p>
+    </li>
+</ol>
+<p>四、用户权利</p>
+<ol>
+    <li>
+        <p><strong>访问与更正</strong>：用户有权访问自己的个人信息，并对其进行更正。用户可以通过本平台提供的联系方式，申请查看或修改自己的个人信息。</p>
+    </li>
+    <li>
+        <p><strong>删除</strong>：在用户停止使用服务或注销账户后，我们将根据用户的请求，删除或匿名化处理其个人信息。</p>
+    </li>
+    <li>
+        <p><strong>投诉与举报</strong>：如果用户认为本平台在处理个人信息方面存在违法行为，可以通过本平台提供的联系方式进行投诉或举报。</p>
+    </li>
+</ol>
+<p>五、隐私声明的更新与修改</p>
+<p>本平台有权根据实际情况和法律法规的变化，对本隐私声明进行更新和修改。任何对隐私声明的修改都将通过本平台公告或电子邮件等方式通知用户。用户在使用服务时，应定期查看隐私声明，以了解最新的个人信息保护措施。</p>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -217,6 +243,17 @@
     <!-- Global Init -->
     <script src="/assets/website/js/frontend/nekoboxandroid/custom.js"></script>
     <script src="https://www.freeclashnode.com/assets/js/frontend/invite-url.js"></script><script src="/assets/website/js/frontend/G.js"></script>
+    <script>
+    $(function() {
+        $('.js_to').click(function() {
+            var url = $(this).data('url');
+            var code = $(this).data('code');
+            url += code;
+
+            window.open(url);
+        })
+    });
+    </script>
 </body>
 
 </html>
