--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -117,6 +117,91 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-15">
+                            <div class="col-md-3">
+                                <a href="/news/article-145213.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240804/a40fa3f2e1b1aa53c3a3a4e2dfd20e5c.webp" class="rounded img-fluid d-block mx-auto" alt="深度解析Shadowrocket：从购买到配置的全方位指南">
+                                </a>
+                            </div>
+                            <div class="right-text col-md-9">
+                                <div class="left-heading">
+                                    <a href="/news/article-145213.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">深度解析Shadowrocket：从购买到配置的全方位指南</h3>
+                                    </a>
+                                </div>
+                                <div class="left-text">
+                                    <p>在当今互联网环境中，网络限制已成为许多地区用户面临的现实问题。为了突破这些限制，代理工具应运而生，而Shadowrocket凭借其出色的性能和易用性，逐渐成为众多用户的首选。本文将全面解析Shadow</p>
+                                </div>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-14">
+                            <div class="col-md-3">
+                                <a href="/news/article-144847.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240804/1a1e7ba53b2042634b437a2232967d30.webp" class="rounded img-fluid d-block mx-auto" alt="Google手机科学上网全攻略：解锁全球网络的终极指南">
+                                </a>
+                            </div>
+                            <div class="right-text col-md-9">
+                                <div class="left-heading">
+                                    <a href="/news/article-144847.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">Google手机科学上网全攻略：解锁全球网络的终极指南</h3>
+                                    </a>
+                                </div>
+                                <div class="left-text">
+                                    <p>引言：为什么我们需要科学上网？  在当今数字化时代，互联网已成为我们获取信息、沟通交流的重要工具。然而，由于各种原因，许多优秀的网络资源在某些地区受到限制。无论是想查阅学术资料、观看海外视频，还是与全</p>
+                                </div>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-13">
+                            <div class="col-md-3">
+                                <a href="/news/article-144483.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240804/ba1b8b70e963c2e20700334ecf898921.webp" class="rounded img-fluid d-block mx-auto" alt="Mac用户科学上网终极指南：从工具选择到实战配置">
+                                </a>
+                            </div>
+                            <div class="right-text col-md-9">
+                                <div class="left-heading">
+                                    <a href="/news/article-144483.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">Mac用户科学上网终极指南：从工具选择到实战配置</h3>
+                                    </a>
+                                </div>
+                                <div class="left-text">
+                                    <p>在当今高度互联的世界中，互联网自由已成为数字生活的基本需求。然而，由于各种原因，许多优质的网络资源和服务被限制在特定区域之外。对于追求高效工作与自由探索的Mac用户而言，掌握科学上网技能不仅是一种技术</p>
+                                </div>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-12">
+                            <div class="col-md-3">
+                                <a href="/news/article-144126.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240804/18cc897391fc28fdab0279a81532ebde.webp" class="rounded img-fluid d-block mx-auto" alt="一键扫码，极速配置：Clash手机端二维码导入全攻略">
+                                </a>
+                            </div>
+                            <div class="right-text col-md-9">
+                                <div class="left-heading">
+                                    <a href="/news/article-144126.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">一键扫码，极速配置：Clash手机端二维码导入全攻略</h3>
+                                    </a>
+                                </div>
+                                <div class="left-text">
+                                    <p>在这个信息爆炸的移动互联网时代，网络代理工具已成为数字生活的必需品。其中，Clash以其强大的性能和灵活的应用场景，在众多工具中脱颖而出。尤其令人称道的是其二维码导入功能，彻底改变了传统繁琐的配置方式</p>
+                                </div>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-11">
+                            <div class="col-md-3">
+                                <a href="/news/article-143753.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240804/eae03542a80077205c0d8f1a5fac97b7.webp" class="rounded img-fluid d-block mx-auto" alt="零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配">
+                                </a>
+                            </div>
+                            <div class="right-text col-md-9">
+                                <div class="left-heading">
+                                    <a href="/news/article-143753.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配</h3>
+                                    </a>
+                                </div>
+                                <div class="left-text">
+                                    <p>在当今互联网环境中，地域限制和网络封锁成为许多网民访问全球资源的障碍。而Clash作为一款强大的代理工具，搭配免费的白嫖机场，为用户提供了一种经济高效的翻墙解决方案。本文将带您全面了解Clash的功能</p>
+                                </div>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-08-10">
                             <div class="col-md-3">
                                 <a href="/news/article-143554.htm" class="xcblog-blog-url">
@@ -144,7 +229,12 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-144847.htm" title="Google手机科学上网全攻略：解锁全球网络的终极指南">Google手机科学上网全攻略：解锁全球网络的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-143554.htm" title="突破网络边界：科学上网全局模式全方位指南">突破网络边界：科学上网全局模式全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-144126.htm" title="一键扫码，极速配置：Clash手机端二维码导入全攻略">一键扫码，极速配置：Clash手机端二维码导入全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-144483.htm" title="Mac用户科学上网终极指南：从工具选择到实战配置">Mac用户科学上网终极指南：从工具选择到实战配置</a></li>
+                        <li class="py-2"><a href="/news/article-145213.htm" title="深度解析Shadowrocket：从购买到配置的全方位指南">深度解析Shadowrocket：从购买到配置的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-143753.htm" title="零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配">零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配</a></li>
                     </ul>
     </div>
 </div>
@@ -156,7 +246,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                     </ul>
     </div>
