--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="http://cgp2-z.com/paid-subscribe/" />
+        <link rel="canonical" href="http://cgp2-e.com/paid-subscribe/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
@@ -13,7 +13,7 @@
 
     <meta name="author" content="VPN在线 订阅机场官网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="http://cgp2-z.com/paid-subscribe/" />
+    <meta property="og:url" content="http://cgp2-e.com/paid-subscribe/" />
     <meta property="og:site_name" content="VPN在线 订阅机场官网" />
     <meta property="og:title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - VPN在线 订阅机场官网" />
     <meta property="og:image" content="/assets/website/img/nekoboxandroid/favicon.ico" />
@@ -41,8 +41,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/website/css/nekoboxandroid/templatemo-art-factory.css">
     <link rel="stylesheet" type="text/css" href="/assets/website/css/nekoboxandroid/owl-carousel.css">
     <link rel="stylesheet" href="/assets/website/css/G.css" />
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9XG4QX3P8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -531,7 +530,12 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-145213.htm" title="深度解析Shadowrocket：从购买到配置的全方位指南">深度解析Shadowrocket：从购买到配置的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-144126.htm" title="一键扫码，极速配置：Clash手机端二维码导入全攻略">一键扫码，极速配置：Clash手机端二维码导入全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-144847.htm" title="Google手机科学上网全攻略：解锁全球网络的终极指南">Google手机科学上网全攻略：解锁全球网络的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-143554.htm" title="突破网络边界：科学上网全局模式全方位指南">突破网络边界：科学上网全局模式全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-144483.htm" title="Mac用户科学上网终极指南：从工具选择到实战配置">Mac用户科学上网终极指南：从工具选择到实战配置</a></li>
+                        <li class="py-2"><a href="/news/article-143753.htm" title="零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配">零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配</a></li>
                     </ul>
     </div>
 </div>
@@ -543,7 +547,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                     </ul>
     </div>
