--- a/about-us.htm
+++ b/about-us.htm
@@ -75,10 +75,6 @@
                         
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                                                        <li><a href="/">首页</a></li>
-                                                        <li><a href="/paid-subscribe/">推荐机场</a></li>
-                                                        <li><a href="/news/">新闻资讯</a></li>
-                                                        <li><a href="/client.htm">客户端</a></li>
                                                     </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -131,12 +127,7 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-144126.htm" title="一键扫码，极速配置：Clash手机端二维码导入全攻略">一键扫码，极速配置：Clash手机端二维码导入全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-143753.htm" title="零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配">零成本翻墙指南：深度解析Clash与白嫖机场的高效搭配</a></li>
-                        <li class="py-2"><a href="/news/article-145213.htm" title="深度解析Shadowrocket：从购买到配置的全方位指南">深度解析Shadowrocket：从购买到配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-144847.htm" title="Google手机科学上网全攻略：解锁全球网络的终极指南">Google手机科学上网全攻略：解锁全球网络的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-143554.htm" title="突破网络边界：科学上网全局模式全方位指南">突破网络边界：科学上网全局模式全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-144483.htm" title="Mac用户科学上网终极指南：从工具选择到实战配置">Mac用户科学上网终极指南：从工具选择到实战配置</a></li>
+                        <li class="py-2"><a href="/news/article-147581.htm" title="解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南">解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南</a></li>
                     </ul>
     </div>
 </div>
@@ -148,7 +139,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                     </ul>
     </div>
@@ -171,10 +162,6 @@
                 <div class="col-lg-7 col-md-12 col-sm-12">
                     <p class="copyright">
                                             <p>
-                                                <a href="/">首页</a> |
-                                                <a href="/paid-subscribe/">推荐机场</a> |
-                                                <a href="/news/">新闻资讯</a> |
-                                                <a href="/client.htm">客户端</a> |
                                                 <a href="/about-us.htm">关于我们</a> |
                         <a href="/disclaimer.htm">免责申明</a> |
                         <a href="/privacy.htm">隐私申明</a> |
