gong zhi neng ji suan zhong xin de qi ye he ke yan dan wei da 47 jia yu ji suan li shi yong gui

--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -108,6 +108,103 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-08">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-153874.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/2465d07a6caba08dd40a9b7f7f67403c.webp" alt="科学上网工具更换全攻略：从选择到配置的完整指南" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-153874.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    科学上网工具更换全攻略：从选择到配置的完整指南                                </h3>
+                            </a>
+                            <p>在当今高度互联的世界中，科学上网工具已成为许多人突破网络限制、获取全球信息的重要途径。然而，随着网络环境的不断变化和技术的持续演进，用户经常面临更换科学上网工具的需求。本文将为您提供一份详尽的指南，帮</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-07">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-153510.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/68a2397f2a20b18df34051a474f48192.webp" alt="解锁网络自由：Quantumult客户端全方位解析与实战指南" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-153510.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    解锁网络自由：Quantumult客户端全方位解析与实战指南                                </h3>
+                            </a>
+                            <p>在当今互联网环境中，跨境访问和信息自由成为许多用户的刚需。作为iOS平台上备受推崇的代理工具，Quantumult凭借其强大的功能和灵活的配置，成为科技爱好者和隐私需求者的首选。本文将带您深入探索这款</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-06">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-153144.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/b42359a344a08ee40e32cc5816ecff31.webp" alt="跨越字符迷障：全方位解决V2Ray脚本中文显示问题" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-153144.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    跨越字符迷障：全方位解决V2Ray脚本中文显示问题                                </h3>
+                            </a>
+                            <p>在互联网隐私保护日益重要的今天，V2Ray作为一款优秀的网络代理工具，凭借其灵活的配置方式和强大的隐私保护功能，赢得了全球用户的青睐。然而，不少用户在享受V2Ray带来的安全与自由时，却遇到了一个令人</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-05">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-152780.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/c4cd269984edef647c2f01dbd869d65b.webp" alt="连接Shadowsocks后无法科学上网的深度解析与全面解决方案" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-152780.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    连接Shadowsocks后无法科学上网的深度解析与全面解决方案                                </h3>
+                            </a>
+                            <p>引言  在当今互联网环境中，科学上网已成为许多用户的刚需。Shadowsocks（简称SS）作为一种轻量级代理工具，因其高效、隐蔽的特性广受欢迎。然而，不少用户在实际使用过程中会遇到连接SS后仍然无法</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-04">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-152416.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/3171aa5f6bca908e7d1f1826d9a0cf9a.webp" alt="突破网络边界：一份详尽的手动科学上网配置指南" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-152416.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    突破网络边界：一份详尽的手动科学上网配置指南                                </h3>
+                            </a>
+                            <p>引言：数字时代的自由通行证  当全球95%的互联网流量经过审查时，科学上网已从技术爱好者的专长演变为现代网民的必备技能。与一键式安装包不同，手动配置如同掌握汽车维修而不仅会驾驶——它赋予你对网络连接的</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-03">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-152053.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/a40fa3f2e1b1aa53c3a3a4e2dfd20e5c.webp" alt="深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-152053.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具                                </h3>
+                            </a>
+                            <p>引言
+在数字时代，互联网已经渗透到我们生活的方方面面。随着信息技术的发展，越来越多的国家和地区采取了不同程度的网络审查措施，导致许多网站、服务和应用无法正常访问。这对于需要进行科学研究、跨境工作和日常</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-09-02">
                         <div class="col-md-3">
                             <div class="img-box">
@@ -150,15 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-152780.htm" title="连接Shadowsocks后无法科学上网的深度解析与全面解决方案">连接Shadowsocks后无法科学上网的深度解析与全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
                         <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-150965.htm" title="空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响">空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响</a></li>
-                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
+                        <li class="py-2"><a href="/news/article-153874.htm" title="科学上网工具更换全攻略：从选择到配置的完整指南">科学上网工具更换全攻略：从选择到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-152053.htm" title="深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具">深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具</a></li>
+                        <li class="py-2"><a href="/news/article-153144.htm" title="跨越字符迷障：全方位解决V2Ray脚本中文显示问题">跨越字符迷障：全方位解决V2Ray脚本中文显示问题</a></li>
                         <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-151328.htm" title="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南">Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-147581.htm" title="解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南">解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
                         <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-148899.htm" title="突破网络边界：V2RayNG英国节点配置与优化全攻略">突破网络边界：V2RayNG英国节点配置与优化全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -170,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
