--- a/privacy.htm
+++ b/privacy.htm
@@ -160,15 +160,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-150965.htm" title="空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响">空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响</a></li>
-                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-147581.htm" title="解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南">解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南</a></li>
                         <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
-                        <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
                         <li class="py-2"><a href="/news/article-151328.htm" title="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南">Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-152053.htm" title="深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具">深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具</a></li>
+                        <li class="py-2"><a href="/news/article-152416.htm" title="突破网络边界：一份详尽的手动科学上网配置指南">突破网络边界：一份详尽的手动科学上网配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-147581.htm" title="解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南">解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南</a></li>
                         <li class="py-2"><a href="/news/article-148899.htm" title="突破网络边界：V2RayNG英国节点配置与优化全攻略">突破网络边界：V2RayNG英国节点配置与优化全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-153874.htm" title="科学上网工具更换全攻略：从选择到配置的完整指南">科学上网工具更换全攻略：从选择到配置的完整指南</a></li>
                     </ul>
     </div>
 </div>
@@ -180,7 +181,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
