sheng ren le gong si gao ji fu zong cai fen guan zhong guo qu ye wu zhong guo qu zong cai liu bo de

--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -5,19 +5,19 @@
         <link rel="canonical" href="https://vpn-online.github.io" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>免责申明 - VPN在线 订阅机场官网</title>
+    <title>2025-09归档 - VPN在线 订阅机场官网</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta name="keywords" content="免责申明 - VPN在线 订阅机场官网" />
-        <meta name="description" content="免责申明 - VPN在线 订阅机场官网" />
+        <meta name="keywords" content="2025-09归档VPN在线 订阅机场官网" />
+        <meta name="description" content="2025-09归档，当前是第1页" />
         <link href="/assets/website/img/free_v2ray_node/favicon.ico" rel="icon">
 
     <meta name="author" content="VPN在线 订阅机场官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://vpn-online.github.io" />
     <meta property="og:site_name" content="VPN在线 订阅机场官网" />
-    <meta property="og:title" content="免责申明 - VPN在线 订阅机场官网" />
+    <meta property="og:title" content="2025-09归档 - VPN在线 订阅机场官网" />
     <meta property="og:image" content="/assets/website/img/free_v2ray_node/favicon.ico" />
-        <meta property="og:description" content="免责申明 - VPN在线 订阅机场官网" />
+        <meta property="og:description" content="2025-09归档，当前是第1页" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - VPN在线 订阅机场官网">
+    <meta name="apple-mobile-web-app-title" content="2025-09归档 - VPN在线 订阅机场官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -55,7 +55,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
         <!--   preloder-->
     <div id="preloader">
         <div id="loader"></div>
@@ -96,10 +96,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 pt-5">
-                    <h1>免责申明</h1>
+                    <h1>2025-09 归档</h1>
                     <ul>
                         <li><a href="/">首页</a></li>
-                        <li>免责申明</li>
+                        <li>2025-09 归档</li>
                     </ul>
                 </div>
             </div>
@@ -110,27 +110,74 @@
     <div class="container py-0 py-sm-5 my-5 about">
         <div class="row">
             <div class="col-md-9">
-                <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
+                <div class="xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-04">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-152416.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/3171aa5f6bca908e7d1f1826d9a0cf9a.webp" alt="突破网络边界：一份详尽的手动科学上网配置指南" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-152416.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    突破网络边界：一份详尽的手动科学上网配置指南                                </h3>
+                            </a>
+                            <p>引言：数字时代的自由通行证  当全球95%的互联网流量经过审查时，科学上网已从技术爱好者的专长演变为现代网民的必备技能。与一键式安装包不同，手动配置如同掌握汽车维修而不仅会驾驶——它赋予你对网络连接的</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-03">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-152053.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/a40fa3f2e1b1aa53c3a3a4e2dfd20e5c.webp" alt="深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-152053.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具                                </h3>
+                            </a>
+                            <p>引言
+在数字时代，互联网已经渗透到我们生活的方方面面。随着信息技术的发展，越来越多的国家和地区采取了不同程度的网络审查措施，导致许多网站、服务和应用无法正常访问。这对于需要进行科学研究、跨境工作和日常</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-02">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-151689.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/c8c30e8ff3b86b64ad227fce7657cea9.webp" alt="Clash全能代理配置指南：从入门到精通的全方位教程" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-151689.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    Clash全能代理配置指南：从入门到精通的全方位教程                                </h3>
+                            </a>
+                            <p>引言：为什么选择Clash？  在数字时代，网络自由与隐私保护已成为刚需。Clash作为一款开源代理工具，凭借其多协议支持、规则自定义和跨平台特性，成为技术爱好者与隐私需求者的首选解决方案。本文将带您</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-01">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/news/article-151328.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/b42359a344a08ee40e32cc5816ecff31.webp" alt="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-151328.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南                                </h3>
+                            </a>
+                            <p>在当今高度互联的时代，网络访问的流畅性与安全性已成为数字生活的刚需。无论是跨国协作的商务人士、追求低延迟的游戏玩家，还是渴望打破信息壁垒的求知者，都面临着网络延迟、地域限制和隐私泄露的困扰。而Clas</p>
+                        </div>
+                    </div>
+                    
+                    <ul class="pagination"><li><a href="/date/2025-09/">&laquo;</a></li> <li><a href="/date/2025-09/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                </div>
             </div>
             <div class="col-md-3">
                 <div class="panel panel-default">
@@ -139,16 +186,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148899.htm" title="突破网络边界：V2RayNG英国节点配置与优化全攻略">突破网络边界：V2RayNG英国节点配置与优化全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-147581.htm" title="解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南">解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-155341.htm" title="突破网络边界：梅林路由器上v2ray的完整部署指南">突破网络边界：梅林路由器上v2ray的完整部署指南</a></li>
-                        <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-152053.htm" title="深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具">深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-150965.htm" title="空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响">空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响</a></li>
-                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-152416.htm" title="突破网络边界：一份详尽的手动科学上网配置指南">突破网络边界：一份详尽的手动科学上网配置指南</a></li>
                         <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-152780.htm" title="连接Shadowsocks后无法科学上网的深度解析与全面解决方案">连接Shadowsocks后无法科学上网的深度解析与全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-154604.htm" title="Clash 香港节点深度指南：从安装配置到高级优化的全面解析">Clash 香港节点深度指南：从安装配置到高级优化的全面解析</a></li>
+                        <li class="py-2"><a href="/news/article-150965.htm" title="空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响">空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响</a></li>
+                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153144.htm" title="跨越字符迷障：全方位解决V2Ray脚本中文显示问题">跨越字符迷障：全方位解决V2Ray脚本中文显示问题</a></li>
+                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-151328.htm" title="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南">Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
                     </ul>
     </div>
 </div>
