--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -2,22 +2,19 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="https://vpn-online.github.io" />
+        <link rel="canonical" href="https://vpn-online.github.io/free-nodes/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>免责申明 - VPN在线 订阅机场官网</title>
+    <title>免费节点订阅，免费机场订阅 - VPN在线 订阅机场官网</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta name="keywords" content="免责申明 - VPN在线 订阅机场官网" />
-        <meta name="description" content="免责申明 - VPN在线 订阅机场官网" />
         <link href="/assets/website/img/free_v2ray_node/favicon.ico" rel="icon">
 
     <meta name="author" content="VPN在线 订阅机场官网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://vpn-online.github.io" />
+    <meta property="og:url" content="https://vpn-online.github.io/free-nodes/" />
     <meta property="og:site_name" content="VPN在线 订阅机场官网" />
-    <meta property="og:title" content="免责申明 - VPN在线 订阅机场官网" />
+    <meta property="og:title" content="免费节点订阅，免费机场订阅 - VPN在线 订阅机场官网" />
     <meta property="og:image" content="/assets/website/img/free_v2ray_node/favicon.ico" />
-        <meta property="og:description" content="免责申明 - VPN在线 订阅机场官网" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -26,7 +23,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - VPN在线 订阅机场官网">
+    <meta name="apple-mobile-web-app-title" content="免费节点订阅，免费机场订阅 - VPN在线 订阅机场官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -55,7 +52,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
         <!--   preloder-->
     <div id="preloader">
         <div id="loader"></div>
@@ -96,10 +93,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 pt-5">
-                    <h1>免责申明</h1>
+                    <h1>免费节点</h1>
                     <ul>
                         <li><a href="/">首页</a></li>
-                        <li>免责申明</li>
+                        <li>免费节点</li>
                     </ul>
                 </div>
             </div>
@@ -110,27 +107,41 @@
     <div class="container py-0 py-sm-5 my-5 about">
         <div class="row">
             <div class="col-md-9">
-                <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
+                <div class="xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-14">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-9-14-clash-node.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/ba1b8b70e963c2e20700334ecf898921.webp" alt="VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-14-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、香港、日本、美国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-13">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-9-13-clash-node.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/eae03542a80077205c0d8f1a5fac97b7.webp" alt="VPN在线 | 9月13日19.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-13-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 9月13日19.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、新加坡、欧洲、日本、加拿大、韩国、美国等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                    
+                                    </div>
             </div>
             <div class="col-md-3">
                 <div class="panel panel-default">
@@ -139,16 +150,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148899.htm" title="突破网络边界：V2RayNG英国节点配置与优化全攻略">突破网络边界：V2RayNG英国节点配置与优化全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-147581.htm" title="解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南">解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-155341.htm" title="突破网络边界：梅林路由器上v2ray的完整部署指南">突破网络边界：梅林路由器上v2ray的完整部署指南</a></li>
-                        <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-152053.htm" title="深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具">深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-150965.htm" title="空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响">空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响</a></li>
-                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-152416.htm" title="突破网络边界：一份详尽的手动科学上网配置指南">突破网络边界：一份详尽的手动科学上网配置指南</a></li>
                         <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-152780.htm" title="连接Shadowsocks后无法科学上网的深度解析与全面解决方案">连接Shadowsocks后无法科学上网的深度解析与全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-153874.htm" title="科学上网工具更换全攻略：从选择到配置的完整指南">科学上网工具更换全攻略：从选择到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-154973.htm" title="解锁家庭网络自由：Homelede固件深度整合Clash全攻略">解锁家庭网络自由：Homelede固件深度整合Clash全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-153144.htm" title="跨越字符迷障：全方位解决V2Ray脚本中文显示问题">跨越字符迷障：全方位解决V2Ray脚本中文显示问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-clash-node.htm" title="VPN在线 | 9月13日19.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月13日19.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
