--- a/about-us.htm
+++ b/about-us.htm
@@ -125,16 +125,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-github.htm" title="VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-clash-node-github.htm" title="VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-clash-node.htm" title="VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-24-clash-verge-rev-node-share.htm" title="VPN在线 | 9月24日22.7M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月24日22.7M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-151328.htm" title="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南">Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-clash-verge-rev-node-share.htm" title="VPN在线 | 9月17日18.2M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月17日18.2M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-clash-v2ray-ss-ssr.htm" title="VPN在线 | 9月21日18M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月21日18M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-152416.htm" title="突破网络边界：一份详尽的手动科学上网配置指南">突破网络边界：一份详尽的手动科学上网配置指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-clash-verge-rev-nodes.htm" title="VPN在线 | 9月28日21.6M/S|免费SSR节点/V2ray节点/Singbox节点/Shadowrocket节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月28日21.6M/S|免费SSR节点/V2ray节点/Singbox节点/Shadowrocket节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-clash-node.htm" title="VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153144.htm" title="跨越字符迷障：全方位解决V2Ray脚本中文显示问题">跨越字符迷障：全方位解决V2Ray脚本中文显示问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-clash-verge-rev-nodes.htm" title="VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-github.htm" title="VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-clash-node.htm" title="VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-4-clash-v2ray-ss-ssr.htm" title="VPN在线 | 10月4日22.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月4日22.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -145,6 +145,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
