--- a/client.htm
+++ b/client.htm
@@ -276,16 +276,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-clash-meta-github.htm" title="VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-clash-verge-rev-node-share.htm" title="VPN在线 | 9月17日18.2M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月17日18.2M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-clash-node.htm" title="VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-clash-verge-rev-node-github.htm" title="VPN在线 | 9月29日20.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月29日20.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-27-clash-verge-rev-node.htm" title="VPN在线 | 9月27日21.9M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月27日21.9M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-152780.htm" title="连接Shadowsocks后无法科学上网的深度解析与全面解决方案">连接Shadowsocks后无法科学上网的深度解析与全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-154973.htm" title="解锁家庭网络自由：Homelede固件深度整合Clash全攻略">解锁家庭网络自由：Homelede固件深度整合Clash全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-155341.htm" title="突破网络边界：梅林路由器上v2ray的完整部署指南">突破网络边界：梅林路由器上v2ray的完整部署指南</a></li>
-                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-clash-verge-rev-node-share.htm" title="VPN在线 | 9月24日22.7M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月24日22.7M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-147581.htm" title="解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南">解锁数字自由：iOS设备上零成本获取Shadowrocket的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-clash-verge-rev-nodes.htm" title="VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-clash-verge-rev-github.htm" title="VPN在线 | 9月26日22.9M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月26日22.9M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-clash-node-daily-updates.htm" title="VPN在线 | 10月1日19.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月1日19.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-clash-v2ray-ss-ssr.htm" title="VPN在线 | 9月21日18M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月21日18M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154604.htm" title="Clash 香港节点深度指南：从安装配置到高级优化的全面解析">Clash 香港节点深度指南：从安装配置到高级优化的全面解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-verge-rev-windows.htm" title="VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -296,6 +296,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
