--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -233,16 +233,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-25-clash-verge-rev-node-github.htm" title="VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
                         <li class="py-2"><a href="/news/article-151328.htm" title="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南">Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-clash-meta-github.htm" title="VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-154604.htm" title="Clash 香港节点深度指南：从安装配置到高级优化的全面解析">Clash 香港节点深度指南：从安装配置到高级优化的全面解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-node.htm" title="VPN在线 | 9月19日22.7M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月19日22.7M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-clash-node.htm" title="VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-152053.htm" title="深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具">深入掌握V2ray工具包在安卓设备上的安装与配置：安全、高效的网络代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-clash-verge-rev-github.htm" title="VPN在线 | 9月26日22.9M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月26日22.9M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-15-clash-node.htm" title="VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-clash-meta-github.htm" title="VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-github.htm" title="VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154973.htm" title="解锁家庭网络自由：Homelede固件深度整合Clash全攻略">解锁家庭网络自由：Homelede固件深度整合Clash全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -253,6 +253,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
