--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -281,16 +281,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148899.htm" title="突破网络边界：V2RayNG英国节点配置与优化全攻略">突破网络边界：V2RayNG英国节点配置与优化全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-152416.htm" title="突破网络边界：一份详尽的手动科学上网配置指南">突破网络边界：一份详尽的手动科学上网配置指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-23-clash-verge-rev-node-github.htm" title="VPN在线 | 9月23日19.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月23日19.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153144.htm" title="跨越字符迷障：全方位解决V2Ray脚本中文显示问题">跨越字符迷障：全方位解决V2Ray脚本中文显示问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-clash-verge-rev-node-share.htm" title="VPN在线 | 9月24日22.7M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月24日22.7M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-15-clash-node.htm" title="VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-clash-verge-rev-node.htm" title="VPN在线 | 9月27日21.9M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月27日21.9M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-clash-node.htm" title="VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-clash-verge-rev-node-github.htm" title="VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154238.htm" title="科学上网全指南：解锁数字世界的自由与安全">科学上网全指南：解锁数字世界的自由与安全</a></li>
-                        <li class="py-2"><a href="/news/article-155341.htm" title="突破网络边界：梅林路由器上v2ray的完整部署指南">突破网络边界：梅林路由器上v2ray的完整部署指南</a></li>
-                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-clash-node.htm" title="VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-clash-meta-github.htm" title="VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-github.htm" title="VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-verge-rev-windows.htm" title="VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-clash-node-github.htm" title="VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-150965.htm" title="空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响">空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响</a></li>
                     </ul>
     </div>
 </div>
@@ -301,6 +301,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
