--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -139,16 +139,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-clash-node-github.htm" title="VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-148899.htm" title="突破网络边界：V2RayNG英国节点配置与优化全攻略">突破网络边界：V2RayNG英国节点配置与优化全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-151689.htm" title="Clash全能代理配置指南：从入门到精通的全方位教程">Clash全能代理配置指南：从入门到精通的全方位教程</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-github.htm" title="VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-clash-node.htm" title="VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-clash-verge-rev-node-github.htm" title="VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-149689.htm" title="自由之门的钥匙：Mac用户终极Vmess客户端配置指南">自由之门的钥匙：Mac用户终极Vmess客户端配置指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-clash-verge-rev-nodes.htm" title="VPN在线 | 9月28日21.6M/S|免费SSR节点/V2ray节点/Singbox节点/Shadowrocket节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月28日21.6M/S|免费SSR节点/V2ray节点/Singbox节点/Shadowrocket节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share.htm" title="VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/news/article-154238.htm" title="科学上网全指南：解锁数字世界的自由与安全">科学上网全指南：解锁数字世界的自由与安全</a></li>
-                        <li class="py-2"><a href="/news/article-150965.htm" title="空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响">空中利剑的交锋：深度解析Air Clash的现代军事内涵与战略影响</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-2-clash-verge-rev-github.htm" title="VPN在线 | 10月2日22.2M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月2日22.2M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-154973.htm" title="解锁家庭网络自由：Homelede固件深度整合Clash全攻略">解锁家庭网络自由：Homelede固件深度整合Clash全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-clash-verge-rev-node-share.htm" title="VPN在线 | 9月17日18.2M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月17日18.2M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-clash-meta-github.htm" title="VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -159,6 +159,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
