--- a/free-nodes/2025-9-29-clash-verge-rev-node-github.htm
+++ b/free-nodes/2025-9-29-clash-verge-rev-node-github.htm
@@ -171,16 +171,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-clash-node.htm" title="VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/news/article-151328.htm" title="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南">Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-153144.htm" title="跨越字符迷障：全方位解决V2Ray脚本中文显示问题">跨越字符迷障：全方位解决V2Ray脚本中文显示问题</a></li>
-                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-22-clash-node.htm" title="VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-github.htm" title="VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-clash-verge-rev-node-github.htm" title="VPN在线 | 9月29日20.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月29日20.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-node.htm" title="VPN在线 | 9月19日22.7M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月19日22.7M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-clash-node-github.htm" title="VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月30日18.7M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-152780.htm" title="连接Shadowsocks后无法科学上网的深度解析与全面解决方案">连接Shadowsocks后无法科学上网的深度解析与全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-148538.htm" title="突破网络边界：电脑科学上网的全面指南与深度解析">突破网络边界：电脑科学上网的全面指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-154238.htm" title="科学上网全指南：解锁数字世界的自由与安全">科学上网全指南：解锁数字世界的自由与安全</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-clash-verge-rev-node-github.htm" title="VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月25日18.5M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-154973.htm" title="解锁家庭网络自由：Homelede固件深度整合Clash全攻略">解锁家庭网络自由：Homelede固件深度整合Clash全攻略</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share.htm" title="VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-23-clash-verge-rev-node-github.htm" title="VPN在线 | 9月23日19.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月23日19.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -191,6 +191,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
