--- a/index.html
+++ b/index.html
@@ -111,6 +111,102 @@
             <div class="col-md-9">
                 <h2 class="mb-3">最近更新文章</h2>
                 <div class="xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/b42359a344a08ee40e32cc5816ecff31.webp" alt="VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月6日18.3M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、韩国、美国、欧洲、日本、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-5-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/18cc897391fc28fdab0279a81532ebde.webp" alt="VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-5-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月5日18.6M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、韩国、加拿大、美国、新加坡、日本、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/18cc897391fc28fdab0279a81532ebde.webp" alt="VPN在线 | 10月4日22.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月4日22.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、香港、美国、日本、欧洲、新加坡、加拿大等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-3-clash-verge-rev-windows.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/1a1e7ba53b2042634b437a2232967d30.webp" alt="VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-3-clash-verge-rev-windows.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月3日21.8M/S|免费Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、新加坡、加拿大、美国、欧洲、日本、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-02">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-2-clash-verge-rev-github.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/3171aa5f6bca908e7d1f1826d9a0cf9a.webp" alt="VPN在线 | 10月2日22.2M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-2-clash-verge-rev-github.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月2日22.2M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、欧洲、日本、香港、美国、新加坡、加拿大等地区,最高速度可达22.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-01">
+                        <div class="col-md-3">
+                            <div class="img-box">
+                                <a href="/free-nodes/2025-10-1-clash-node-daily-updates.htm" class="xcblog-blog-url">
+                                    <img class="img-fluid" src="/uploads/20240804/9379e278b9ce3feba3668a7f4947f899.webp" alt="VPN在线 | 10月1日19.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-1-clash-node-daily-updates.htm" class="xcblog-blog-url">
+                                <h3 class="h1 fw-bold xcblog-blog-title">
+                                    VPN在线 | 10月1日19.6M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点推荐，在线VPN机场梯子购买推荐                                </h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、欧洲、加拿大、美国、日本、香港、新加坡等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-09-30">
                         <div class="col-md-3">
                             <div class="img-box">
@@ -335,70 +431,6 @@
                             <p>这一次的节点更新覆盖了日本、美国、新加坡、韩国、欧洲、加拿大、香港等地区,最高速度可达18.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-16">
-                        <div class="col-md-3">
-                            <div class="img-box">
-                                <a href="/free-nodes/2025-9-16-clash-node-github.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/38135ec94739702d8720d3820c1ac813.webp" alt="VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-16-clash-node-github.htm" class="xcblog-blog-url">
-                                <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 9月16日20.5M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐                                </h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、香港、新加坡、日本、美国、韩国、加拿大等地区,最高速度可达20.5 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-15">
-                        <div class="col-md-3">
-                            <div class="img-box">
-                                <a href="/free-nodes/2025-9-15-clash-node.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/4c4c52ab4b18d8d89515f9d5a4c7332a.webp" alt="VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-15-clash-node.htm" class="xcblog-blog-url">
-                                <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐                                </h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了新加坡、香港、日本、欧洲、美国、韩国、加拿大等地区,最高速度可达20.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-14">
-                        <div class="col-md-3">
-                            <div class="img-box">
-                                <a href="/free-nodes/2025-9-14-clash-node.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/ba1b8b70e963c2e20700334ecf898921.webp" alt="VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-14-clash-node.htm" class="xcblog-blog-url">
-                                <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 9月14日20.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，在线VPN机场梯子购买推荐                                </h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、香港、日本、美国等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-13">
-                        <div class="col-md-3">
-                            <div class="img-box">
-                                <a href="/free-nodes/2025-9-13-clash-node.htm" class="xcblog-blog-url">
-                                    <img class="img-fluid" src="/uploads/20240804/eae03542a80077205c0d8f1a5fac97b7.webp" alt="VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐" class="img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-13-clash-node.htm" class="xcblog-blog-url">
-                                <h3 class="h1 fw-bold xcblog-blog-title">
-                                    VPN在线 | 9月13日19.9M/S|免费SSR/V2ray节点/Shadowrocket节点/Clash节点推荐，在线VPN机场梯子购买推荐                                </h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、新加坡、欧洲、日本、加拿大、韩国、美国等地区,最高速度可达19.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                     </div>
             </div>
             <div class="col-md-3">
@@ -408,16 +440,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-clash-verge-rev-node-github.htm" title="VPN在线 | 9月29日20.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月29日20.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154238.htm" title="科学上网全指南：解锁数字世界的自由与安全">科学上网全指南：解锁数字世界的自由与安全</a></li>
-                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-22-clash-node.htm" title="VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月22日19.1M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-152416.htm" title="突破网络边界：一份详尽的手动科学上网配置指南">突破网络边界：一份详尽的手动科学上网配置指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-clash-meta-github.htm" title="VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月20日18.2M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151328.htm" title="Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南">Clash加速器：解锁网络自由的全能神器——功能解析与深度使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-153510.htm" title="解锁网络自由：Quantumult客户端全方位解析与实战指南">解锁网络自由：Quantumult客户端全方位解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-153874.htm" title="科学上网工具更换全攻略：从选择到配置的完整指南">科学上网工具更换全攻略：从选择到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-153144.htm" title="跨越字符迷障：全方位解决V2Ray脚本中文显示问题">跨越字符迷障：全方位解决V2Ray脚本中文显示问题</a></li>
+                        <li class="py-2"><a href="/news/article-147839.htm" title="科学上网新选择：Clash订阅购买全攻略与深度解析">科学上网新选择：Clash订阅购买全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-clash-node.htm" title="VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月18日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154604.htm" title="Clash 香港节点深度指南：从安装配置到高级优化的全面解析">Clash 香港节点深度指南：从安装配置到高级优化的全面解析</a></li>
                         <li class="py-2"><a href="/news/article-154973.htm" title="解锁家庭网络自由：Homelede固件深度整合Clash全攻略">解锁家庭网络自由：Homelede固件深度整合Clash全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-150254.htm" title="V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南">V2Ray安全真相：开源代理工具是否暗藏病毒风险？全面解析与使用指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-clash-node.htm" title="VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐">VPN在线 | 9月15日20.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，在线VPN机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148899.htm" title="突破网络边界：V2RayNG英国节点配置与优化全攻略">突破网络边界：V2RayNG英国节点配置与优化全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -428,6 +460,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
